# BayesianMarketMaker

./: .gitignore  README.md  pyproject.toml
market_maker/: environment.py  model.py
math/: bayesian_estimation.py  mcmc.py
parameter_estimation/: bayesian_estimation.py  bayesian_estimation_fast.py  mcmc.py  mcmc_fast.py
price_model/: heston.py
price_models/: heston.py  price_simulator.py
