[project]
name = "bayesianmarketmaker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deltalake>=1.0.2",
    "duckdb>=1.3.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "torch>=2.7.1",
]
